# rift

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  manifesto.md  package.nix  rift.default.toml  roadmap.md  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: funding.yml
.github/workflows/: release-nix-build.yml  release.yml  rust.yml
assets/: Info.plist
comp/: _rift-cli.ps1  _rift.ps1  rift-cli.bash  rift-cli.elv  rift-cli.fish  rift-cli.nu  rift-cli.zsh  rift.bash  rift.elv  rift.fish  rift.nu  rift.zsh
man/: rift-cli.1  rift.1
nix/: module.nix  overlay.nix  package.nix
src/: actor.rs  common.rs  ipc.rs  layout_engine.rs  lib.rs  model.rs  server.rs  sys.rs  ui.rs
src/actor/: app.rs  broadcast.rs  centered_bar.rs  command_switcher.rs  config.rs  config_watcher.rs  drag_swap.rs  event_tap.rs  gesture_tap.rs  menu.rs  menu_bar.rs  mission_control.rs  mission_control_observer.rs  mouse.rs  notification_center.rs  process_actor.rs  raise_manager.rs  reactor.rs  spaces.rs  stack_line.rs  swipe.rs  window_notify.rs  wm_controller.rs
src/actor/reactor/: animation.rs  display_topology.rs  error.rs  main_window.rs  managers.rs  native_tabs.rs  query.rs  replay.rs  testing.rs  tests.rs  transaction_manager.rs  utils.rs
src/actor/reactor/events/: app.rs  command.rs  drag.rs  focus.rs  mod.rs  outcome.rs  space.rs  system.rs  window.rs  window_discovery.rs
src/actor/spaces/: tests.rs
src/cli/: mod.rs  rift.rs  rift_cli.rs
src/common/: collections.rs  config.rs  heavy.rs  log.rs  util.rs
src/ipc/: cli_exec.rs  protocol.rs  subscriptions.rs
src/layout_engine/: binary_tree.rs  engine.rs  floating.rs  graph.rs  resize.rs  scratchpad.rs  systems.rs  utils.rs  workspaces.rs
src/layout_engine/engine/: persistence.rs
src/layout_engine/engine/persistence/: matcher.rs  mod.rs  reconcile.rs  restore.rs  snapshot.rs  storage.rs  tests.rs
src/layout_engine/systems/: bsp.rs  constraints.rs  dwindle.rs  master_stack.rs  scroll.rs  scrolling.rs  stack.rs  traditional.rs
src/layout_engine/systems/traditional/: layout.rs  stack.rs  window.rs
src/model/: app_rules.rs  floating_position_store.rs  hidden_window_placement.rs  reactor.rs  server.rs  space_activation.rs  swaparc.rs  tree.rs  tx_store.rs  virtual_workspace.rs  window_registry.rs  window_store.rs
src/sys/: accessibility.rs  app.rs  axuielement.rs  cgs_window.rs  dispatch.rs  display_churn.rs  display_link.rs  enhanced_ui.rs  event.rs  event_tap.rs  executor.rs  geometry.rs  haptics.rs  hotkey.rs  mach.rs  observer.rs  power.rs  process.rs  run_loop.rs  screen.rs  service.rs  skylight.rs  space_switch.rs  timer.rs  window_notify.rs  window_server.rs
src/ui/: centered_bar.rs  command_switcher.rs  drag_feedback.rs  menu_bar.rs  mission_control.rs  overlay_common.rs  stack_line.rs
xtask/: Cargo.toml
xtask/src/: comp.rs  main.rs  man.rs
