[package]
name = "rift-wm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "rift"
test = false

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
incremental = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0.83"
ascii_tree = "0.1.1"
bitflags = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
dispatchr = { git = "https://github.com/drewcrawford/dispatchr" }
livesplit-hotkey = "0.8.0"
nix = { version = "0.30.1", features = ["process", "user"] }
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "NSApplication",
    "NSAppearance",
    "NSAccessibility",
    "NSEvent",
    "NSTouch",
    "NSGraphics",
    "NSRunningApplication",
    "NSResponder",
    "NSScreen",
    "NSWindow",
    "NSWorkspace",
    "NSBezierPath",
    "NSColor",
    "NSImage",
    "NSGraphicsContext",
    "NSFont",
    "NSText",
    "NSStringDrawing",
    "NSStatusBar",
    "NSStatusItem",
    "NSButton",
    "NSStatusBarButton",
    "NSControl",
    "NSResponder",
    "NSView",
    "NSColorSpace",
    "NSVisualEffectView",
    "objc2-core-foundation",
    "objc2-core-graphics",
    "objc2-quartz-core"
] }
objc2-application-services = {version = "0.3.2", default-features = false, features = [
	"AXUIElement",
	"AXError",
	"AXValue",
	"HIServices",
	"AXAttributeConstants",
	"AXNotificationConstants",
	"libc",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFCGTypes",
    "CFArray",
    "CFRunLoop",
    "CFDate",
    "CFMachPort",
    "CFString",
    "CFNumber",
    "CFAttributedString"
] }
objc2-core-graphics = { version = "0.3.1", default-features = false, features = [
    "CGEvent",
    "CGEventTypes",
    "CGError",
    "CGWindow",
    "CGDirectDisplay",
    "CGColor",
    "CGColorSpace",
    "CGGradient",
    "objc2"
] }
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "NSArray",
    "NSEnumerator",
    "NSNotification",
    "NSKeyValueCoding",
    "NSString",
    "NSThread",
    "NSValue"
] }
objc2-quartz-core = { version = "0.3.0", default-features = true }
once_cell = "1.21.3"
parking_lot = "0.12"
ron = "0.11.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
shell-escape = "0.1.5"
slotmap = { version = "1.0.7", features = ["serde"] }
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "sync", "rt", "net", "io-util"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.15"
toml = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-timing = { version = "0.7.0", features = ["layer"] }
tracing-tree = { version = "0.4.0", features = ["time"] }
continue = { git = "https://github.com/drewcrawford/continue" }
futures-task = "0.3.31"
regex = "1.11.0"
enum_dispatch = "0.3.13"
crossbeam-channel = "0.5"
num_enum = "0.7.4"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
dashmap = "6.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
test_bin = "0.4.0"
tempfile = { version = "3.17.1", default-features = false }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "NSApplication",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSGraphics",
    "NSRunningApplication",
    "NSResponder",
    "NSScreen",
    "NSText",
    "NSTextField",
    "NSView",
    "NSWindow",
    "NSWorkspace",
    "objc2-core-foundation",
] }
